better Boolean, Number ctor; mark no immed write for roster